[package]
name = "message-feed-data"
version = "0.17.0"
description = "Message feed data structures"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
solana-sdk-bpf-types = { path = "../solana-contract-types" }
