[package]
name = "messagefeed-rs"
version = "0.1.0"
authors = ["Justin Starry"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base58 = "0.1"
bincode = "1.1.4"
console_error_panic_hook = "0.1.6"
failure = "0.1"
log = "0.4"
serde-wasm-bindgen = "0.1"
solana-sdk = { path = '../../../solana/sdk' }
solana_bindgen = { path = '../solana-bindgen' }
message-feed-data = { path = '../contract-data' }
stdweb = "0.4"
strum = "0.13.0"
strum_macros = "0.13.0"
wasm-bindgen = { version = "0.2" }
web_logger = { git = "https://github.com/jstarry/web_logger", branch = "wasm-bindgen" }
yew = { git = "https://github.com/jstarry/yew", branch = "solana", features = ["proc_macro"] }

[build-dependencies]
dotenv = "0.13"
